@@ -1,3 +1,10 @@
+2007-09-07  Nathan Froyd  <froydnj@codesourcery.com>
+
+	* lto-lang.c (signed_and_unsigned_types): New variable.
+	(lto_type_for_size): Consult signed_and_unsigned_types to find
+	an approprite type, creating it if necessary.
+	(lto_set_decl_assembler_name): Add actual method body.
+
 2007-09-06  Jim Blandy  <jimb@codesourcery.com>
 
 	* lto-read.c (lto_read_body): Doc fix.
